[package]
name = "remote_rpc_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/remote_rpc_rs"
description = "Cross-NAT remote RPC middleware based on WebRTC and MQTT"

[workspace]
members = ["crates/signal", "crates/grpc", "crates/peer"]
resolver = "2"

# Unified dependency management for the entire workspace
[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", default-features = false }

# WebRTC
webrtc = "0.14"

# MQTT client
rumqttc = "0.25"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

# gRPC and Protocol Buffers
tonic = "0.14"
tonic-prost = "0.14"
tonic-web = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
prost = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "std",
  "tracing-log",
] }

# CLI
clap = { version = "4.5", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
] }

# TLS
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }

# Utilities
futures = "0.3"
bytes = "1.8"
regex = "1.11"
once_cell = "1.21"
chrono = "0.4"

# Async trait support
async-trait = "0.1"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console"] }
ctrlc = "3.4"

[dependencies]
# Async runtime with only needed features
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "time",
] }

# Error handling
anyhow = { workspace = true }

# CLI parsing
clap = { workspace = true }

# TLS for WebRTC
rustls = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "ansi",
] }

# Async utilities
futures = { workspace = true }

# Internal crates
signal = { path = "crates/signal", version = "0.1.0" }
peer = { path = "crates/peer", version = "0.1.0" }
grpc = { path = "crates/grpc", version = "0.1.0", optional = true }

# gRPC (optional)
tonic = { workspace = true, optional = true }

# REST (optional)
axum = { version = "0.8", optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
grpc = ["dep:grpc", "dep:tonic"]
rest = ["dep:axum", "dep:serde"]

[[bin]]
name = "proxyd"
path = "src/proxy/proxyd.rs"

[[bin]]
name = "portald"
path = "src/portal/portald.rs"

[[bin]]
name = "portal_hub_grpc"
path = "src/portal_hub/grpc.rs"
required-features = ["grpc"]

[[bin]]
name = "portal_hub_rest"
path = "src/portal_hub/rest.rs"
required-features = ["rest"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
