[package]
name = "signal"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "MQTT-based signaling layer for WebRTC connections"

[dependencies]
rumqttc = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "ansi"] }

[[test]]
name = "signal_test"
path = "tests/signal_test.rs"
